--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -511,15 +511,13 @@ h3 > .fa {
 	padding: 260px 0 160px 0;
 	text-align: center;
 	color: #FFF;
+	height: 100%;
 }
 
 #intro h1, #intro h2, #intro h3, #intro h4, #intro h5, #intro h6 {
 	color: #FFF;
 }
 
-.hello {
-	margin: 0 0 100px;
-}
 
 /* ---------------------------------------------- /*
  * Profile-contact
