UI uplift and code cleanup

--- a/assets/bootstrap/css/bootstrap.css
+++ b/assets/bootstrap/css/bootstrap.css
@@ -4297,7 +4297,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #fff;
+  /* color: #fff; */
   background-color: transparent;
 }
 .navbar-inverse .navbar-text {
@@ -4308,13 +4308,13 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #fff;
+  /* color: #fff; */
   background-color: transparent;
 }
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
-  color: #fff;
+  /* color: #fff; */
   background-color: #080808;
 }
 .navbar-inverse .navbar-nav > .disabled > a,
