--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -453,7 +453,7 @@ h3 > .fa {
 
 .navbar-custom .navbar-brand {
 	font: 700 18px/1.2 'Montserrat', serif, sans-serif;
-	color: #FFF;
+	color: #000;
 }
 
 .navbar-custom .navbar-nav > li.active {
@@ -466,7 +466,7 @@ h3 > .fa {
 
 .navbar-custom .navbar-nav > li > a,
 .navbar-custom .navbar-nav .dropdown-menu > li > a {
-	color: #FFF;
+	color: #000;
 	font-size: 12px;
 }
 
@@ -756,6 +756,10 @@ h3 > .fa {
 		margin: 0 0 20px;
 	}
 
+}
+
+.justify-content-center {
+	text-align: center;
 }
 
 
